Table students {
  id uuid [primary key, not null]
  email varchar(255) [unique, not null]
  first_name varchar(255) [not null]
  last_name varchar(255) [not null]
  address varchar(255) [not null]
  created_at timestamp [null]
  updated_at timestamp [null]

  indexes {
    first_name
    last_name
  }
}

Table courses {
  id uuid [primary key, not null]
  title varchar(255) [not null]
  description varchar(255) [not null]

  indexes {
    title
  }
}

Table course_student {
  student_id uuid [ref: > students.id]
  course_id uuid [ref: > courses.id]
}
